# czmicroaudio

./: .gitattributes  .gitignore  Arduino.stc  CMakeLists.txt  PrepareForWin32Development.bat  README.md  TODO.md  compile_commands.json  disassemble.bat  platformio.ini  set_toolchain_path.bat
docs/: CMakeLists.txt  TODO.md  czmicroaudio.vpp
lib/: CMakeLists.txt  library.json
lib/czmicroaudio/: CMakeLists.txt  library.json
lib/czmicroaudio/examples/: CMakeLists.txt
lib/czmicroaudio/examples/simple/: simple.cpp
lib/czmicroaudio/src/czmicroaudio/: Foo.cpp  Foo.h
lib/examples/: CMakeLists.txt
lib/examples/arduino/simple/: simple.cpp
lib/examples/simple/: simple.cpp
lib/examples/win32/simple/: win32_simple.cpp
lib/src/crazygaze/microaudio/: All.h  Audio.h  AudioPlayer.h  AudioPlayerListener.h  AudioSource.h  Config.h  Core.cpp  Core.h  Defs.h  DiskFile.cpp  DiskFile.h  File.cpp  File.h  Foo.cpp  Foo.h  ITModule.cpp  ITModule.h  LinkedList.h  Logger.h  MODModule.cpp  MODModule.h  MemFile.cpp  MemFile.h  Memory.h  MemoryTracker.cpp  MemoryTracker.h  Mixer.cpp  Mixer.h  MixerListener.h  Module.cpp  Module.h  Object.cpp  Object.h  Output.h  Player.h  PlayerPrivateDefs.h  SoundOutput.cpp  SoundOutput.h  StaticSound.cpp  StaticSound.h  (+47 more)
lib/src/crazygaze/microaudio/OpenAL/: czOpenALOutput.cpp  czOpenALOutput.h
lib/src/crazygaze/microaudio/Symbian/inc/: czAudioShared.h  czSymbianOutput.h
lib/src/crazygaze/microaudio/Symbian/src/: czSymbianOutput.cpp
lib/src/crazygaze/microaudio/config/: CustomConfig.h  czPlayerConfigCustom.h
lib/src/crazygaze/microaudio/globals/: czITModuleTables.h  czMODConsts.h  czMODModuleTables.h
lib/src/crazygaze/microaudio/output/: BaseOutput.h
lib/src/crazygaze/microaudio/output/arduino/: ArduinoI2SOutput.cpp  ArduinoI2SOutput.h
lib/src/crazygaze/microaudio/output/win32/: Win32WaveOutOutput.cpp  Win32WaveOutOutput.h  waveOutErrorCodes.txt
lib/src/crazygaze/microaudio/win32/: Win32WaveOutOutput.cpp  Win32WaveOutOutput.h  czWin32WaveOutOutput.cpp  czWin32WaveOutOutput.h
media/: EYE.IT  TESTSONG.IT  birds_11025.raw  birds_48000.raw  educationally_valuable.mod  stasis.it
src/: CMakeLists.txt  SerialStringReader.h  mymain.cpp  scratchpad.h
src/MCLK/: MCLK.cpp  MCLK.h  README.md  mclk.pio  mclk.pio.h  test_mclk.ino.txt
src/UnitTests/: LinkedListUnitTests.cpp  MemoryUnitTests.cpp
windowsHAL/: Arduino.cpp  Arduino.h  CMakeLists.txt  README.md
